--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="info" style="display: flex;align-items: center; justify-content: center;">
+<div class="info" style="display: flex;align-items: center; justify-content: center;height:100vh">
     <h1>Hey, this is shuvro </h1> 
 </div>
 
